Fixing problem with Online tests displaying on small devices

--- a/public_html/Styles/styles.css
+++ b/public_html/Styles/styles.css
@@ -151,7 +151,11 @@ li.icon:hover  {
   .responsive ul.dropdown-content{
       display: none;
     position: relative;
-}
+  }
+  
+  .responsive  #test_icon{
+       width: 15%;
+   }
 }
 
 .dropdown {
